--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    margin-top:5px;
+    margin-bottom: 5px;
+    
+}
+
 #container{
     width: 500px;
     height: 500px;
@@ -7,6 +20,9 @@
     border: 2px, solid, black
 }
 
+button{
+    margin-bottom: 5px;
+}
 
 .columna{
     background-color: white;
